<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  	<string name="text_player_name">First Last Name</string>
    <string name="text_game_speed">Game Speed</string>
    <string name="text_score">Score:</string>
	<string name="text_high_score">High:</string>
	<string name="text_lives">Lives:</string>
	<string name ="game2button2"> Click</string>
	<string name="lastName"> Last Name</string>
	
	<string name ="notBrushed"> notBrushed</string>
	<string name="text_game_over">Game Over</string>
	<string name="dsiplayScore">Game highest score display here</string>
    <string name="game2TextView"> </string>
    <!-- button -->
	<string name="text_return">Return</string>
	<string name="text_settings">Settings</string>
	<string name="text_start_game">Light Blub</string>
	<string name="game2">Image</string>
	<string name="game3">Orientation</string>
	<string name="default_header"> Hedaer image</string>
	<string name="text_i_am_there">I\'m there</string>
	<string name="text_score2">Score:</string>
	<string name="text_high_score2">High:</string>
	<string name="text_lives2">Lives:</string>
	<string name="title">Just woke up</string>
	
	<string name="Upsidedown">Brushing teeth</string>
	
	<string name="landscape"> Cool! spike hair style </string>
	
    <!-- default -->
    <string name="default_name">Player1</string>
    
    
    <!-- text -->
    <string name="unit_second">second</string>
    <string name="text_save_question">Do you want to save changing?</string>
	<string name="text_landscape">Landscape</string>
    <string name="text_Portrait">Portrait</string>
    <string name="text_Spike">Spike</string>
    <string name="text_Brush">Brush</string>
    
    
    <!-- Game 3 -->
    <string name="CurrentScore">Current Score: </string>
    <string name="HighScore">High Score: </string>
    <string name="LivesLeft">Lives Left: </string>
    <string name="RightButton">Click</string>
    <string name="LeftButton">Left</string>
    <string name="GameLabel1">Click on Right!</string>
          <!--      Statistics -->
    <string name="showStatistics"></string>
 	<string name="text_score3">Score:</string>
 	<string name="text_high_score3"></string>
 	<string name="text_lives3">Lives:</string>
	<string name="default_header3"> Off light blub</string>
	<string name="text_lightOff">OFF</string>
	<string name="text_lightOn">ON</string>
	<string name="game3TextView3"> </string>
	<string name ="blubTitle"></string>
	<string name="On"> Light is ON</string>
	<string name ="Off">Light is OFF</string>	
	<string name="Amath"> 1 + 3 = 4 </string>
	<string name="english"> A B C </string>
	<string name="subject">  </string>
</resources>