<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/game2Score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_score2" />

    <TextView
        android:id="@+id/game2HighScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_high_score2" />

    <TextView
        android:id="@+id/game2lives2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_lives2" />

    <TextView
        android:id="@+id/game2TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game2imageView"
        android:layout_alignRight="@+id/game2HighScore2"
        android:layout_marginBottom="57dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/game2button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game2button2" />

    <ImageView
        android:id="@+id/game2imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_above="@+id/game2button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/default_header"
        android:src="@drawable/wake_up" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game2button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/title" />

</RelativeLayout>