<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp" >
  
  <!-- Screen Design for the SONGS -->

    <Button
        android:id="@+id/game1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/game2"
        android:layout_alignRight="@+id/game2"
        android:layout_centerVertical="true"
        android:text="@string/text_start_game" />

    <Button
        android:id="@+id/game2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game1"
        android:layout_alignLeft="@+id/game3"
        android:layout_alignRight="@+id/game3"
        android:text="@string/game2" />

    <Button
        android:id="@+id/game3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game2"
        android:layout_centerHorizontal="true"
        android:text="@string/game3" />

</RelativeLayout>
